Modificacion de producto para crud completo

--- a/LaMarqueza/Templates/Perfil.html
+++ b/LaMarqueza/Templates/Perfil.html
@@ -82,7 +82,7 @@
             <td class="text-center align-middle">{{ pedido.4 }}</td>
             <td class="text-center align-middle">${{ pedido.5 }}</td>
             <td class="text-center align-middle">${{ pedido.6 }}</td>
-            <td class="text-center align-middle"><img src="/Media/productos/{{ pedido.8 }}" alt="{{ pedido.7 }}" style="width: 100px;"></td>
+            <td class="text-center align-middle"><img src="/Media/{{ pedido.8 }}" alt="{{ pedido.7 }}" style="width: 100px;"></td>
         </tr>
     </table>
     </div>
