--- a/LaMarqueza/Templates/Productos.html
+++ b/LaMarqueza/Templates/Productos.html
@@ -72,7 +72,7 @@
                                                         form.appendChild(button);
                                                     });
                                                 </script>
-                                                <img src='/Media/productos/{{a.FOTO_PRO}}' class='modal-image img-fluid'
+                                                <img src='/Media/{{a.FOTO_PRO}}' class='modal-image img-fluid'
                                                     style="width: 200px; height: auto;" />
 
                                             </form>
