--- a/LaMarqueza/Templates/AdminProductos.html
+++ b/LaMarqueza/Templates/AdminProductos.html
@@ -6,7 +6,7 @@
 
     <div>
         <h1>Productos</h1>
-        <a href="{% url 'crearproducto' %}" class="btn btn-primary float-right">Crear Producto</a>
+        <a href="{% url 'crearproducto' %}" id="Crear Producto" class="btn btn-primary float-right">Crear Producto</a>
         <table class="table">
             <thead>
                 <tr>
