--- a/LaMarqueza/Templates/Administrador.html
+++ b/LaMarqueza/Templates/Administrador.html
@@ -8,7 +8,7 @@
       <a class="nav-link active" aria-current="page" href="{% url "usuarios" %}">Usuarios</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="{% url "productosadmin" %}">Productos</a>
+      <a id="Productos" class="nav-link" href="{% url "productosadmin" %}">Productos</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="{% url "categoriasadmin" %}">Categorias de Producto</a>
