--- a/LaMarqueza/Templates/registration/register.html
+++ b/LaMarqueza/Templates/registration/register.html
@@ -62,7 +62,7 @@
             </div>
 
             <div class="form-row">
-                <button type="submit" class="btn btn-primary">Registrarse</button>
+                <button type="submit" id="Registrarse" class="btn btn-primary">Registrarse</button>
                 <a href="{% url 'iniciarsesion' %}">
                     <button type="button" class="btn btn-secondary ml-1">Iniciar sesión</button>
                 </a>
