--- a/LaMarqueza/Templates/CrearCupones.html
+++ b/LaMarqueza/Templates/CrearCupones.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block Administrador %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/cupon_style_new.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/Estilos.css' %}">
 
 {% if messages %}
 <div class="messages">
@@ -31,7 +31,7 @@
 
         <div class="cupon-input-group">
             <label for="porcentaje" class="cupon-label">Porcentaje de Descuento:</label>
-            <input type="number" id="porcentaje" name="porcentaje" step="0.01" class="cupon-input" required>
+            <input type="number" id="porcentaje" name="porcentaje" min="1" max="99" step="1" class="cupon-input" required>
         </div>
 
         <div class="cupon-input-group cupon-checkbox-group">
