--- a/LaMarqueza/Templates/ProductoDetalles.html
+++ b/LaMarqueza/Templates/ProductoDetalles.html
@@ -82,7 +82,7 @@
         </div>
         <script>
             document.getElementById('delete-button').addEventListener('click', function(e) {
-                if (!confirm('¿Estás seguro de que quieres eliminar esta categoría?')) {
+                if (!confirm('¿Estás seguro de que quieres eliminar esta Producto?')) {
                     e.preventDefault();
                 }
             });
