--- a/LaMarqueza/Templates/CrearProductos.html
+++ b/LaMarqueza/Templates/CrearProductos.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="form-actions">
-                <button type="submit" class="btn">Crear Producto</button>
+                <button type="submit" id="Crear_Producto" class="btn">Crear Producto</button>
             </div>
         </form>
     </div>
