--- a/LaMarqueza/Templates/Administrador.html
+++ b/LaMarqueza/Templates/Administrador.html
@@ -4,30 +4,30 @@
 
 {% block Boddy %}
 <ul class="nav justify-content-center">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="{% url "usuarios" %}">Usuarios</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{% url "productosadmin" %}">Productos</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{% url "categoriasadmin" %}">Categorias de Producto</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="{% url "ordenes" %}">Ordenes</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link " href="{% url "perfil" %}" >Perfil</a>
-    </li>
-  </ul>
-  <div style="padding: 10%;">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="{% url 'usuarios' %}">Usuarios</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="Productos" href="{% url  'productosadmin' %}">Productos</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url  'categoriasadmin' %}">Categorias de Producto</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="{% url  'ordenes' %}">Ordenes</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link " href="{% url  'perfil' %}">Perfil</a>
+  </li>
+</ul>
+<div style="padding: 10%;">
 
-    
+
   {% block Administrador%}
 
 
   {% endblock Administrador%}
-  </div>
-  
+</div>
+
 
 {% endblock Boddy %}
