--- a/LaMarqueza/Templates/Principal.html
+++ b/LaMarqueza/Templates/Principal.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
+
 <body>
     <!-- navBar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -59,9 +60,9 @@
                     <li class="nav-item">
                         <a class="nav-link verde-oscuro" href="{% url 'contactenos' %}">Contactenos</a>
                     </li>
-                    
-                    
-                    
+
+
+
 
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
@@ -70,33 +71,37 @@
                         </a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle verde-oscuro" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a id="Mi Perfil" class="nav-link dropdown-toggle verde-oscuro" href="#" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
                             {% if request.user.is_staff %}
-                                Admin
+                            Admin
                             {% else %}
-                                Mi Perfil
+                            Mi Perfil
                             {% endif %}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
                             {% if request.user.is_staff %}
-                                <li><a class="dropdown-item " href="{% url 'administrador' %}">Admin</a></li>
+                            <li><a id="Administrador" class="dropdown-item " href="{% url 'administrador' %}">Admin</a></li>
                             {% else %}
-                                <li><a class="dropdown-item " href="{% url 'perfil' %}">Mi Perfil</a></li>
+                            <li><a class="dropdown-item " href="{% url 'perfil' %}">Mi Perfil</a></li>
                             {% endif %}
-                            <li><hr class="dropdown-divider "></li>
-                            <li><a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesion</a></li>
+                            <li>
+                                <hr class="dropdown-divider ">
+                            </li>
+                            <li><a id="Cerrar Sesion" class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesion</a>
+                            </li>
                         </ul>
                     </li>
-                {% else %}
+                    {% else %}
                     <li class="nav-item">
                         <a href="{% url 'iniciarsesion' %}">
-                            <button type="button " class="btn btn-primary btnInicio">
+                            <button type="button " id="Iniciar Sesion" class="btn btn-primary btnInicio">
                                 Iniciar Sesion
                             </button>
                         </a>
                     </li>
-                {% endif %}
-                    
+                    {% endif %}
+
 
 
                     </li>
@@ -165,19 +170,18 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
     <script src="{% static 'JS/JavaScript.js' %}"></script>
 
-   
-    
+
+
 </body>
 
-   
-    
-    
-    
+
+
+
+
 
 
 </html>
