--- a/LaMarqueza/Templates/ProductoDetalles.html
+++ b/LaMarqueza/Templates/ProductoDetalles.html
@@ -77,7 +77,7 @@
         </div>
 
         <div class="form-buttons">
-            <input type="submit" name="action" value="Actualizar" class="btn">
+            <input type="submit" name="action" value="Actualizar" id="Actualizar" class="btn">
             <input type="submit" name="action" value="Eliminar" id="delete-button" class="btn">
         </div>
         <script>
