funcionalidad de correos masivos

--- a/LaMarqueza/Templates/Administrador.html
+++ b/LaMarqueza/Templates/Administrador.html
@@ -20,7 +20,7 @@
       <a class="nav-link" href="{% url "ordenes" %}">Ordenes</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link " href="{% url "perfil" %}" >Perfil</a>
+      <a class="nav-link " href="{% url "enviar_correos" %}" >Enviar Correos</a>
     </li>
   </ul>
   <div style="padding: 10%;">
